--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles.css">
     <title>Tau Iota My</title>
   </head>
   <body>
-    <p>Inhalt der Seite</p>
+    <div id="mainDiv">
+      <p>Inhalt der Seite</p>
+	</div>
   </body>
 </html>
