--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="mainDiv">
-      <p>Inhalt der Seite</p>
+      <p>Under Construction</p>
 	</div>
   </body>
 </html>
